Alignment fixes

--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,9 @@ h2 {
   height: 80px;
   border-radius: 10px;
 }
-
+.project-intro {
+  margin-bottom: 20px; 
+}
 .project-details h3 {
   margin: 0;
   font-size: 1.2rem;
